# FileMover

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: config_manager.rs  error.rs  main.rs  progress.rs
apps/cli/src/commands/: apply.rs  config.rs  dry_run.rs  mod.rs  plan.rs  scan.rs  undo.rs
apps/gui/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
apps/gui/src/: App.tsx  error.rs  index.css  main.rs  main.tsx  state.rs
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/src/: main.rs
apps/gui/src/commands/: config.rs  execute.rs  mod.rs  plan.rs  scan.rs  undo.rs  utils.rs
apps/gui/src/components/: Layout.tsx
apps/gui/src/pages/: ExecutionPage.tsx  PlanPage.tsx  ResultsPage.tsx  ScanResultsPage.tsx  SetupPage.tsx
apps/gui/src/services/: fileExecutor.ts  fileScanner.ts  planGenerator.ts  sessionManager.ts
apps/gui/src/types/: index.ts
core/matcher/: Cargo.toml
core/matcher/src/: engine.rs  lib.rs  matcher.rs  normalizer.rs
core/planner/: Cargo.toml
core/planner/src/: conflict_resolver.rs  lib.rs  planner.rs  template.rs  validator.rs
core/scanner/: Cargo.toml
core/scanner/src/: lib.rs  scanner.rs  walker.rs  windows_scanner.rs
core/types/: Cargo.toml
core/types/src/: config.rs  error.rs  journal.rs  lib.rs  pattern.rs  plan.rs  rule.rs
docs/: api-specification.md  architecture-design.md  functional-requirements.md  implementation-tasks.md  product-requirements.md
