[package]
name = "filemover-cli"
version = "0.1.0"
edition = "2021"
description = "FileMover command line interface"

[[bin]]
name = "filemover"
path = "src/main.rs"

[dependencies]
filemover-types = { path = "../../core/types" }
filemover-matcher = { path = "../../core/matcher" }
filemover-scanner = { path = "../../core/scanner" }
filemover-planner = { path = "../../core/planner" }

# CLI framework
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Progress bars
indicatif = "0.17"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"