[package]
name = "filemover-gui"
version = "0.1.0"
description = "FileMover GUI application"
authors = ["FileMover Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
filemover-types = { path = "../../core/types" }
filemover-matcher = { path = "../../core/matcher" }
filemover-scanner = { path = "../../core/scanner" }
filemover-planner = { path = "../../core/planner" }

# Tauri
tauri = { version = "1.5", features = [ "window-unminimize", "window-unmaximize", "fs-remove-file", "fs-read-file", "window-minimize", "window-show", "window-hide", "path-all", "window-close", "fs-write-file", "dialog-message", "fs-copy-file", "dialog-open", "fs-read-dir", "window-maximize", "shell-open", "dialog-save", "fs-create-dir", "window-start-dragging", "fs-rename-file", "fs-remove-dir", "dialog-ask", "fs-exists", "dialog-confirm"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID for session management
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
