[package]
name = "filemover-gui"
version = "0.1.0"
description = "FileMover GUI Application"
authors = ["FileMover Team"]
license = ""
repository = ""
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# FileMover core libraries
filemover-types = { path = "../../../core/types" }
filemover-scanner = { path = "../../../core/scanner" }
filemover-matcher = { path = "../../../core/matcher" }
filemover-planner = { path = "../../../core/planner" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Development profile for faster builds
[profile.dev]
opt-level = 0
debug = true
incremental = true